--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>Vai ser uma imagem aqui</h1>
+        <img class="cabecalho-imagem"src ="./img/educação.jpg" alt="./img/logo 1.png">
+        <h1></h1>
         <ul>
                 <li>Estudante</li>
                 <li>Escola</li>
